# mosaic_task

./: .gitignore  .pre-commit-config.yaml  README.md  inference.py  pyproject.toml  train.py
config/: distilbert.yml
model_artifacts/logs/: inference.logs  training.logs
model_artifacts/metrics/: test_metrics.json  val_metrics.json
notebook/: data_analysis_model_evaluation.ipynb
src/common/: constants.py
src/inference/: predict.py
src/preprocessing/: data_preprocessing.py
src/training/: train.py
