[tool.poetry]
name = "Mosaic_task"
version = "0.1.0"
description = "Binary text classification"
authors = ["Nitesh Pandey <niteshpandey9869@gmail.com>"]
repository = "https://github.com/nitesh47/mosaic_task"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "2.12.0"
keras = "2.12.0"
pyyaml = "6.0"
pandas = "2.0.1"
transformers = "4.29.2"
tensorflow-hub= "0.14.0"
notebook = "=7.0.2"
scikit-learn = "=1.0.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
flake8 = "*"
isort = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
